<resources>
    <string name="app_name">Superiora</string>
    <string name="logo">Superiora Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_user">New user?</string>
    <string name="or">or</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already Have an account?</string>
    <string name="login">Login</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="create_account">Create Account</string>
    <string name="google">Google</string>
    <string name="tv_name_null">Nama tidak boleh kosong!</string>
    <string name="tv_email_null">Email salah!</string>
    <string name="tv_username_null">Username tidak boleh kosong!</string>
    <string name="tv_pass_null">Password tidak boleh kosong!</string>
    <string name="passvalidate">Password harus menyertakan 1 Huruf kapital, Symbol, Angka dan minimal 8 karakter </string>
    <string name="tv_repeatpass_null">Tulis ulang password!</string>
    <string name="email_matches">Isi email dengan Benar</string>
    <string name="pass_notmatch">Password tidak sama!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Superiora</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tv_field_notnull">Field tidak boleh kosong!</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="settings">Settings</string>
    <string name="roadmaps">Roadmaps</string>

    <!-- Roadmaps -->
    <string name="android">Android</string>
    <string name="angular">Angular</string>
    <string name="backend">Backend</string>
    <string name="dba">DBA</string>
    <string name="devops">DevOps</string>
    <string name="frontend">Frontend</string>
    <string name="python">Python</string>
    <string name="java">Java</string>
    <string name="react">React</string>
    <string name="go">Go</string>

    <!-- filter menu -->
    <string name="all_task">All Task</string>
    <string name="near_deadline">Near Deadline</string>
    <string name="is_active">Active Task</string>
    <string name="complete">Complete Task</string>
    <string name="favorite_task">Favorite Task</string>


    <!-- Notification -->
    <string name="pref_key_notify">key_notification</string>
    <string name="pref_notify_name">Notification</string>
    <string name="pref_notify_summary">Daily reminder for nearest active task.</string>

    <!-- Night Mode Preferences -->
    <string name="pref_dark_title">Dark mode</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_auto" translatable="false">auto</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>

    <!-- Logout Preferences -->
    <string name="pref_logout_title" translatable="false">Log Out</string>
    <string name="pref_key_logout">key_logout</string>
    <string name="pref_logout_true" translatable="false">Log Out</string>
    <string name="pref_logout_false" translatable="false">Log In</string>


    <string name="profile">Profile</string>
    <string name="reminder">Reminder</string>
    <string name="today_schedule">Today Schedule</string>
    <string name="your_task">Your Task</string>
    <string name="title_hint">Title</string>
    <string name="trigger_link_hint">Trigger Link</string>
    <string name="details_hint">Details</string>
    <string name="due_date">Due Date</string>
    <string name="save">Save</string>
    <string name="dummy_details">Thu, 2 Dec 2021</string>
    <string name="next_step">Add Next Step</string>
    <string name="next_step_text">Next Step :</string>
    <string name="update">Update</string>
    <string name="save_changes">Save Changes</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="profile_image">Profile Image</string>
    <string name="change_photo">Change Photo</string>
    <string name="display">Display</string>
    <string name="dummy_detail">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</string>
    <string name="edit_task">Edit Task</string>
    <string name="detail">Detail Task</string>
    <string name="task_updated">Task updated</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="register_failed">Register failed! Please Try Again</string>
    <string name="regiter_success">You have been successfully registered</string>
    <string name="login_success">Success Login</string>
    <string name="login_failed">Login failed! Please try again</string>
    <string name="edit_profile_success">Success updating data</string>
    <string name="edit_profile_failed">Failed updating data</string>
    <string name="alarm_on">Notifikasi Pengingat dinyalakan</string>
    <string name="alarm_off">Notifikasi Pengingat dimatikan</string>


    <string name="search">Search</string>

    <string name="btnAdd">Add new task</string>
    <string name="addTask">Add Task</string>
    <string name="delete">Delete</string>
    <string name="empty_task">Empty Task</string>
    <string name="added">Successful added new task!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="validation_delete">Are you sure you want to delete?</string>
    <string name="text_delete">Successfully deleted</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="notask">There is no task left !\nYou can relax for a while!</string>
    <string name="register_success">You have been successfully registered.</string>
    <string name="notification_message_format">(%1$s - %2$s) %3$s</string>

    <!-- Search Query -->
    <string name="search_hint">Search Task Title</string>
    <string name="value">No task left</string>
    <string name="noactive_data">There is no active task!</string>
    <string name="nocomplete_task">There is no complete task!</string>
    <string name="no_favorite_task">There is no favorite task!</string>
    <string name="noresult_search">There is no result</string>
    <string name="star">*</string>


</resources>