<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/profile">

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/reminder">
        <SwitchPreference
            app:key="@string/pref_key_notify"
            app:summary="@string/pref_notify_summary"
            app:title="@string/pref_notify_name"
            app:icon="@drawable/ic_notification"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/display">

        <ListPreference
            app:defaultValue="@string/pref_dark_auto"
            app:entries="@array/dark_mode"
            app:entryValues="@array/dark_mode_value"
            app:key="@string/pref_key_dark"
            app:title="@string/pref_dark_title"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/ic_darkmode"/>

        <Preference
            app:icon="@drawable/ic_logout"
            app:key="@string/pref_key_logout"
            app:defaultValue="@string/pref_logout_true"
            app:title="@string/pref_logout_title"/>

    </PreferenceCategory>

</PreferenceScreen>